# Senitel

./: CLAUDE.md
backend/: cert_streamer.py  inference_service.py  package-lock.json  package.json  run_preprocessing.py  streamer.py
backend/src/: index.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/services/: websocket.js
insider-threat-detection/: README.md  pyproject.toml
insider-threat-detection/configs/: config.local.yaml  config.yaml
insider-threat-detection/src/: __init__.py
insider-threat-detection/src/cert_dataset/: __init__.py
insider-threat-detection/src/features/: __init__.py  graph_builder.py  statistical.py  statistical_complete.py
insider-threat-detection/src/pipeline/: stage1_pipeline.py  stage2_pipeline.py
insider-threat-detection/src/preprocessing/: stage2_research_grade.py
insider-threat-detection/src/utils/: __init__.py  config.py  logging.py
ml_detetcion/: requirements.txt
ml_detetcion/src/cert_dataset/: loaders.py  normalizer.py  privacy.py
ml_detetcion/src/features/: sequence_encoder.py
ml_detetcion/src/models/: detectors.py
ml_detetcion/src/pipeline/: stage2_complete_pipeline.py
ml_detetcion/src/utils/: helpers.py
